--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
+asn1crypto==0.22.0
+bcrypt==3.1.3
+cffi==1.10.0
 click==6.7
+cryptography==1.9
+Fabric==1.13.2
 Flask==0.12.2
+Flask-Testing==0.5.0
+idna==2.5
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+paramiko==2.2.1
+pyasn1==0.2.3
+pycparser==2.17
+pymongo==3.4.0
+PyNaCl==1.1.2
+six==1.10.0
 Werkzeug==0.12.2
