--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==6.7
 cryptography==1.9
 Fabric==1.13.2
 Flask==0.12.2
+Flask-PyMongo==0.5.1
 Flask-Testing==0.5.0
 idna==2.5
 itsdangerous==0.24
